# screenwatch

./: .gitignore  LICENSE  Makefile  README.md  config.ini.example  pyproject.toml  screenwatch-handler.sh.example  screenwatch.service
screenwatch/: __init__.py  monitor.py
