[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "screenwatch"
version = "0.1.0"
description = "Monitor udev for screen connections and run commands"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "pyudev>=0.24.0",
]

[project.scripts]
screenwatch = "screenwatch.monitor:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["screenwatch*"]
